--- a/consumer/Dockerfile
+++ b/consumer/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.13-slim 
 
-COPY requirements.txt . 
+COPY .consumer/requirements.txt . 
 
 RUN pip install --no-cache-dir -r requirements.txt 
 
