--- a/producer/Dockerfile
+++ b/producer/Dockerfile
@@ -1,9 +1,11 @@
 FROM python:3.13-slim 
 
-COPY ./producer/requirements.txt . 
+WORKDIR /app
+
+COPY requirements.txt . 
 
 RUN pip install --no-cache-dir -r requirements.txt 
 
-COPY ./producer .
-COPY ./data .
+COPY . .
+
 CMD ["python","main.py"]
